--- a/playbooks/DeletePackages-R.yml
+++ b/playbooks/DeletePackages-R.yml
@@ -4,48 +4,53 @@
   - env_variables
 
   tasks:
+    - name: "Chrrot on the images"
+      command: " chroot /cm/images/{{ images_name }}"
+
     - name: Remove Package R - Ropen Microsoft 3.3.3
       yum:
         name: microsoft-r-open-foreachiterators-3.3-3.3.3-1.x86_64, microsoft-r-open-mro-3.3-3.3.3-1.x86_64, microsoft-r-open-mkl-3.3-3.3.3-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
 
 
     - name: Remove Package R - Ropen Microsoft 3.4.0
       yum:
         name: microsoft-r-open-mro-3.4-3.4.0-1.x86_64, microsoft-r-open-mkl-3.4-3.4.0-1.x86_64, microsoft-r-open-foreachiterators-3.4-3.4.0-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
 
     - name: Remove Package R - Ropen Microsoft 3.4.1
       yum:
         name: microsoft-r-open-mkl-3.4.1-3.4.1.1002-1.x86_64, microsoft-r-open-mro-3.4.1-3.4.1.1002-1.x86_64, microsoft-r-open-foreachiterators-3.4.1-3.4.1.1002-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
 
     - name: Remove Package R - Ropen Microsoft 3.4.2
       yum:
         name: microsoft-r-open-mkl-3.4.2-3.4.2.224-1.x86_64, microsoft-r-open-mro-3.4.2-3.4.2.224-1.x86_64, microsoft-r-open-foreachiterators-3.4.2-3.4.2.224-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
 
     - name: Remove Package R - Ropen Microsoft 3.4.3
       yum:
         name: microsoft-r-open-mkl-3.4.3-3.4.3.108-1.x86_64, microsoft-r-open-mro-3.4.3-3.4.3.108-1.x86_64, microsoft-r-open-foreachiterators-3.4.3-3.4.3.108-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
 
     - name: Remove Package R - Ropen Microsoft 3.5.1
       yum:
         name: microsoft-r-open-mkl-3.5.1-3.5.1.1029-1.x86_64, microsoft-r-open-mro-3.5.1-3.5.1.1029-1.x86_64, microsoft-r-open-foreachiterators-3.5.1-3.5.1.1029-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
 
     - name: Remove Package R - Ropen Microsoft 3.5.3
       yum:
         name: microsoft-r-open-mkl-3.5.3-3.5.3.18-1.x86_64, microsoft-r-open-mro-3.5.3-3.5.3.18-1.x86_64
-        installroot: /cm/images/{{ images_name }}/
+        #installroot: /cm/images/{{ images_name }}/
         state: removed
+
+
 
 
     
