--- a/playbooks/UpdatePackages-R.yml
+++ b/playbooks/UpdatePackages-R.yml
@@ -5,9 +5,6 @@
 
   tasks:
 
-    - name: "Chrrot on the images"
-      command: " chroot /cm/images/{{ images_name }}"
-
     - name: Install R - WISE - 3.3.3
       vars:
         packages3_3_3:
@@ -16,7 +13,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.3.3/microsoft-r-open/rpm/microsoft-r-open-mkl-3.3.rpm
       yum:
         name: "{{ packages3_3_3 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
 
 
 
@@ -28,7 +25,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.4.0/microsoft-r-open/rpm/microsoft-r-open-mkl-3.4.rpm
       yum:
         name: "{{ packages3_4_0 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
 
 
 
@@ -40,7 +37,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.4.1/microsoft-r-open/rpm/microsoft-r-open-mkl-3.4.1.rpm
       yum:
         name: "{{ packages3_4_1 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
 
 
     - name: Install R - WISE - 3.4.2
@@ -51,7 +48,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.4.2/microsoft-r-open/rpm/microsoft-r-open-mkl-3.4.2.rpm
       yum:
         name: "{{ packages3_4_2 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
 
 
 
@@ -63,7 +60,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.4.3/microsoft-r-open/rpm/microsoft-r-open-mkl-3.4.3.rpm
       yum:
         name: "{{ packages3_4_3 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
   
 
 
@@ -76,7 +73,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.5.1/microsoft-r-open/rpm/microsoft-r-open-mkl-3.5.1.rpm
       yum:
         name: "{{ packages3_5_1 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
   
 
 
@@ -87,7 +84,7 @@
           - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.5.3/microsoft-r-open/rpm/rhel/microsoft-r-open-mkl-3.5.3.rpm
       yum:
         name: "{{ packages3_5_3 }}"
-        #installroot: /cm/images/{{ images_name }}/
+        installroot: /cm/images/{{ images_name }}/
 
 
 
