Update env_variables, playbooks/UpdatePackages-R.yml, playbooks/UpdatePackages.yml, playbooks/UpdatePackage-Docker.yml, playbooks/RegsiterRepo.yml, playbooks/UpdatePackageJenkins.yml files Deleted playbooks/UpdatePackages-ide.yml, playbooks/DeletePackages-ide.yml files

--- a/playbooks/UpdatePackage-Docker.yml
+++ b/playbooks/UpdatePackage-Docker.yml
@@ -16,12 +16,12 @@
 
     - name: "Install new Certificat"
       yum:
-        name: "https://satellitelab.sanofi.com/pub/katello-ca-consumer-latest.noarch.rpm"
+        name: {{katello-url}}
         state: present
   
 
     - name: "Register the images"
-      command: "subscription-manager register --activationkey=ak_prod_rhel7 --org=SANOFI-ORG --force"
+      command: {{register-cmd}}
 
     - name: "Add repository Docker"
       command: "yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo"
