--- a/playbooks/RegsiterRepo.yml
+++ b/playbooks/RegsiterRepo.yml
@@ -17,12 +17,12 @@
 
     - name: "Install new Certificat"
       yum:
-        name: "https://satellitelab.sanofi.com/pub/katello-ca-consumer-latest.noarch.rpm"
+        name: {{katello-url}}
         state: present
   
 
     - name: "Register the images"
-      command: "subscription-manager register --activationkey=ak_prod_rhel7 --org=SANOFI-ORG --force"
+      command: {{register-cmd}}
 
 
 
