--- a/playbooks/UpdatePackageJenkins.yml
+++ b/playbooks/UpdatePackageJenkins.yml
@@ -1,4 +1,4 @@
----
+--
 - hosts: CM-Tools-Server 
   vars_files:
   - env_variables
@@ -14,11 +14,12 @@
 
     - name: "Install new Certificat"
       yum:
-        name: "https://emea-sat-capsule.sanofi.com/pub/katello-ca-consumer-latest.noarch.rpm"
+        name: {{katello-url}}
         state: present
   
+
     - name: "Register the images"
-      command: "subscription-manager register --activationkey=ak_prod_rhel7 --org=SANOFI-ORG --force"
+      command: {{register-cmd}}
 
     - name: " yum clean all"
       command: " yum clean all"
