--- a/playbooks/RegsiterRepo.yml
+++ b/playbooks/RegsiterRepo.yml
@@ -19,6 +19,18 @@
       yum:
         name: "{{ katelloUrl }}"
         state: present
+        
+    
+    
+    - name: "Valiadated inside chroot"
+      command: "ls -alrt /cm"
+      register: InsideChroot
+    
+    - debug: msg="InsideChroot-> {{ InsideChroot }}"
+
+    - name: "Add containerd.io"
+
+
   
 
     - name: "Register the images"
