--- a/playbooks/UpdatePackageJenkins.yml
+++ b/playbooks/UpdatePackageJenkins.yml
@@ -37,15 +37,31 @@
     
     - debug: msg="InsideChroot-> {{ InsideChroot }}"
 
-    - name: "Install Repo jenkins"
-      command: "curl --silent --location http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | sudo tee /etc/yum.repos.d/jenkins.rep"
+   - name: Download jenkins.repo
+      get_url:
+        url: http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
+        dest: /etc/yum.repos.d/jenkins.repo
 
-    - name: " add keys - jenkins-ci.org.key"
-      command: "rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key"
+    - name: Import Jenkins Key
+      rpm_key:
+        state: present
+        key: https://jenkins-ci.org/redhat/jenkins-ci.org.key
 
-    - name: Install package for jenkins
-      vars:
-        packages:
-          - jenkins
+    - name: Install Jenkins
       yum:
-        name: "{{ packages }}"
+        name: jenkins
+        state: present
+
+
+    #- name: "Install Repo jenkins"
+    #   command: "curl --silent --location http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | sudo tee /etc/yum.repos.d/jenkins.rep"
+
+     #- name: " add keys - jenkins-ci.org.key"
+       #command: "rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key"
+
+     #- name: Install package for jenkins
+       #vars:
+         #packages:
+           #- jenkins
+       #yum:
+         #name: "{{ packages }}"
