--- a/playbooks/UpdatePackages.yml
+++ b/playbooks/UpdatePackages.yml
@@ -4,8 +4,8 @@
   - env_variables
 
   tasks:
-    #- name: "Chrrot on the images"
-    #  command: " chroot /cm/images/{{ images_name }}"
+    - name: "Chrrot on the images"
+      command: " chroot /cm/images/{{ images_name }}"
 
     - name: Remove Certtificat 
       yum:
